--- a/wallet/AndroidManifest.xml
+++ b/wallet/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.paccoin.wallet_test"
     android:installLocation="internalOnly"
-    android:versionCode="60430"
-    android:versionName="6.4.3">
+    android:versionCode="19070501"
+    android:versionName="2.0.0">
 
     <!-- normal permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
