--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.1'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'com.squareup.okhttp:logging-interceptor:2.7.5'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.squareup.moshi:moshi:1.5.0'
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation('com.github.tony19:logback-android-classic:1.1.1-6') {
@@ -153,7 +157,7 @@ android {
             applicationId = "hashengineering.dash.wallet.beta"
         }
         prod {
-            applicationId = "hashengineering.darkcoin.wallet"
+            applicationId = "paccommunity.pac.wallet"
         }
         _testNet3 {
             applicationId = "hashengineering.darkcoin.wallet_test"
