--- a/wallet/AndroidManifest.xml
+++ b/wallet/AndroidManifest.xml
@@ -61,9 +61,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:supportsRtl="true"
         android:theme="@style/My.Theme">
         <activity
             android:name="net.paccoin.wallet.ui.WalletActivity"
+            android:anyDensity="true"
             android:configChanges="keyboard|keyboardHidden"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:exported="true"
